correct paye computation

--- a/src/app/paye/paye.component.html
+++ b/src/app/paye/paye.component.html
@@ -4,7 +4,7 @@
   </a>
 
   <h2>
-    {{this.name}}
+    {{this.userName}}
   </h2>
 </nav>
 
@@ -33,7 +33,7 @@
       <div>
         <h5>Deductible NSSF Contribution: {{pensionDeduction}}</h5>
         <h5>Income After Pension Deduction: {{postPensionDeductionIncome}}</h5>
-        <h5>Benefits in kind: {{benefits}}</h5>
+        <h5>Benefits in kind: {{empBenefits}}</h5>
         <h5>Taxable Income: {{taxableIncome}}</h5>
         <h5>Tax Deduction : {{taxDeduction}}</h5>
         <h5>Personal Relief: {{personalRelief}}</h5>
